@@ -43,7 +43,8 @@
         //     "osimis-web-viewer",
         //     "stone-webviewer",
         //     "orthanc-explorer-2",
-        //     "ohif"
+        //     "ohif",
+        //     "volview"
         // ],
 
         //"UncheckedResources" : [],
